fixed scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,6 +14,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-y: hidden;
+}
+
 // Theme
 .theme-colors {
   background: var(--background-color) !important;
